--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -23,7 +23,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: goldenrod">
             <img src="/static/images/logo.jpg" width="50px">
-            <a class="navbar-brand" href="index.html">&nbsp;Central Bank</a>
+            <a class="navbar-brand" href="index.html">&nbsp;CityU Bank</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
