updated transfer function
transfer, loan, branch model.

--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -41,7 +41,7 @@
         
                 <!--SIDE PANEL BEGINS -->
                 <section id="side_panel" class="col-3">
-                    <img src="/static/images/logo.jpg" class="container btn">
+                    <img src="/static/images/logo.jpg" class="container btn" alt="">
                     <!-- OPERATIONS -->
                     <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
                     
