Change Urls, some base layout

--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -22,8 +22,8 @@
     
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: goldenrod">
-            <img src="/static/images/logo.jpg" width="50px">
-            <a class="navbar-brand" href="index.html">&nbsp;CityU Bank</a>
+            <img src="/static/images/768px-CityU_logo.jpg" width="50px">
+            <a class="navbar-brand"> CityU Bank</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,7 +41,7 @@
         
                 <!--SIDE PANEL BEGINS -->
                 <section id="side_panel" class="col-3">
-                    <img src="/static/images/logo.jpg" class="container btn" alt="">
+                    <img src="/static/images/768px-CityU_logo.jpg" class="container btn" alt="">
                     <!-- OPERATIONS -->
                     <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
                     
