--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
 
 {% block bodycontent %}    
     <div class="container text-center">
-        <h1>Welcome to Central Bank</h1>
-        <h4><em>We do not breakdown</em></h4>
+        <h1>Welcome to CityU Bank</h1>
+        <h4><em>5003 Project by Li,Mingyao Cheng,Ziyan Zhang, Xingyu Pan,Jiahua</em></h4>
     </div>
     
     <br>
