--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <title>Central Bank</title>
+        <title>CityU Bank</title>
         
         <!-- CSS FRAMEWORKS REQUIRED -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -22,8 +22,8 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-            <img src="/static/images/logo.jpg" width="50px">
-            <a class="navbar-brand" href="{% url 'home' %}">&nbsp;Central Bank</a>
+            <img src="/static/images/768px-CityU_logo.jpg" width="50px">
+            <a class="navbar-brand" href="{% url 'home' %}">&nbsp;CityU Bank</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
