--- a/profiles/templates/profiles/money_transfer.html
+++ b/profiles/templates/profiles/money_transfer.html
@@ -24,7 +24,7 @@
         }
         
         .side {
-            color: aliceblue;
+            color: black
         }
         .side:hover {
             color: mediumaquamarine;
