--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,7 +32,7 @@
         }
         
         .side {
-            color: aliceblue;
+            color: black;
         }
         .side:hover {
             color: mediumaquamarine;
