--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -41,8 +41,8 @@
         <div class="container-fluid row">
         
                 <!--SIDE PANEL BEGINS -->
-                <section id="side_panel" class="col-3" style="margin: 0px;height: auto">
-                    <img src="/static/images/768px-CityU_logo.jpg" class="container btn" style="margin: auto">
+                <section id="side_panel" class="col-3" style="margin: 0px;height: auto;background-image: linear-gradient(to right,lightsteelblue,floralwhite)">
+                    <img src="/static/images/768px-CityU_logo.jpg" class="container btn" style="margin: auto;width: 250px"><br><br>
                     <!-- OPERATIONS -->
                     <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
                     
@@ -50,9 +50,9 @@
                     
                     <a href="{% url 'profiles:loan_app' %}" class="side" id="loan">Loan application</a> <br> <br>
                     
-                    <a href="{% url 'profiles:ewallet' %}" class="side" id="ewallet">eWallet&trade;</a> <br> <br>
-                    
-                    <a href="{% url 'profiles:online_pay' %}" class="side" id="online">Online Payment</a> <br> <br>
+{#                    <a href="{% url 'profiles:ewallet' %}" class="side" id="ewallet">eWallet&trade;</a> <br> <br>#}
+{#                    #}
+{#                    <a href="{% url 'profiles:online_pay' %}" class="side" id="online">Online Payment</a> <br> <br>#}
                     
                     <a href="{% url 'profiles:settings' %}" class="side" id="settings">Account settings</a> <br> <br>
                     
