--- a/profiles/templates/profiles/settings.html
+++ b/profiles/templates/profiles/settings.html
@@ -26,7 +26,7 @@
         }
         
         .side {
-            color: aliceblue;
+           color: black;
         }
         .side:hover {
             color: mediumaquamarine;
