--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -56,7 +56,7 @@
                     
                     <a href="{% url 'profiles:settings' %}" class="side" id="settings">Account settings</a> <br> <br>
                     
-                    <a href="{% url 'profiles:edit_details' %}" class="side warning" id="details">Edit account details</a> <br> <br>
+                    <a href="{% url 'profiles:edit_details' %}" class="side" id="details">Edit account details</a> <br> <br>
                     
                     <a href="{% url 'profiles:delete_account' %}" class="side danger" id="delete">Delete account</a> <br> <br>                
                 </section>
@@ -72,7 +72,7 @@
             <div class="text-center">
                 &copy; Website created with <i class="fa fa-heart" style="color: green"></i> by <a href="https://github.com/hiiragimei/HomeRun" target="_blank">Home Run</a>
                 <br>
-                <i class="fa fa-github"></i> Contribute to this project on <a href="https://github.com/rafi007akhtar/BankingProject" target="_blank">GitHub</a>
+
             </div>
         </section>
         
