--- a/profiles/templates/profiles/edit_details.html
+++ b/profiles/templates/profiles/edit_details.html
@@ -100,7 +100,7 @@
                         <input type="email" class="form-control" placeholder="Student"> -->
 
                         {% csrf_token %}
-                        {{ form1 }}
+                        {{ form1.as_p }}
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -209,7 +209,18 @@
     </section>
 {% endblock %}
 
+
+
 {% block scriptcontent %}
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+    <script>
+$(document).ready(function() {
+    $('.datepicker').datepicker();
+});
+</script>
+
     <script>
         $(".current").removeClass("current");
         $("#details").addClass("current");
