--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -43,22 +43,46 @@
                 <!--SIDE PANEL BEGINS -->
                 <section id="side_panel" class="col-3" style="margin: 0px;height: auto;background-image: linear-gradient(to right,lightsteelblue,floralwhite)">
                     <img src="/static/images/768px-CityU_logo.jpg" class="container btn" style="margin: auto;width: 250px"><br><br>
+
                     <!-- OPERATIONS -->
-                    <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
+                    <div class="side">
+		                <div class="accordion" id="accordion2">
+			                <div class="accordion-group">
+				                <div class="accordion-heading">
+					                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                       href="#collapseOne" style="color: black">
+						            Account Manage
+                                    </a>
+				                </div>
+                                <br>
+				            <div id="collapseOne" class="accordion-body collapse" style="height: 0px; ">
+					            <div class="accordion-inner" >
+                                    <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
+
+                                    <a href="{% url 'profiles:settings' %}" class="side" id="settings">Account settings</a> <br> <br>
+
+                                    <a href="{% url 'profiles:edit_details' %}" class="side" id="details">Edit account details</a> <br> <br>
+
+                                     <a href="{% url 'profiles:delete_account' %}" class="side danger" id="delete">Delete account</a> <br> <br>
+
+					            </div>
+				            </div>
+			                </div>
+	                    </div>
+                    </div>
+
+
                     
                     <a href="{% url 'profiles:money_transfer' %}" class="side" id="transfer">Money Transfer</a> <br> <br>
                     
                     <a href="{% url 'profiles:loan_app' %}" class="side" id="loan">Loan application</a> <br> <br>
-                    
+
+
 {#                    <a href="{% url 'profiles:ewallet' %}" class="side" id="ewallet">eWallet&trade;</a> <br> <br>#}
 {#                    #}
 {#                    <a href="{% url 'profiles:online_pay' %}" class="side" id="online">Online Payment</a> <br> <br>#}
                     
-                    <a href="{% url 'profiles:settings' %}" class="side" id="settings">Account settings</a> <br> <br>
-                    
-                    <a href="{% url 'profiles:edit_details' %}" class="side" id="details">Edit account details</a> <br> <br>
-                    
-                    <a href="{% url 'profiles:delete_account' %}" class="side danger" id="delete">Delete account</a> <br> <br>                
+
                 </section>
                 <!-- SIDE PANEL ENDS -->
         
@@ -80,6 +104,8 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/try/bootstrap/twitter-bootstrap-v2/docs/assets/js/jquery.js"></script>
+	    <script type="text/javascript" src="/try/bootstrap/twitter-bootstrap-v2/docs/assets/js/bootstrap-collapse.js"></script>
 
         {% block scriptcontent %}
         {% endblock %}
