--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -75,13 +75,7 @@
                     
                     <a href="{% url 'profiles:money_transfer' %}" class="side" id="transfer">Money Transfer</a> <br> <br>
                     
-                    <a href="{% url 'profiles:loan_app' %}" class="side" id="loan">Loan application</a> <br> <br>
-
-
-{#                    <a href="{% url 'profiles:ewallet' %}" class="side" id="ewallet">eWallet&trade;</a> <br> <br>#}
-{#                    #}
-{#                    <a href="{% url 'profiles:online_pay' %}" class="side" id="online">Online Payment</a> <br> <br>#}
-                    
+                    <a href="{% url 'profiles:loans' %}" class="side" id="loans">Loan application</a> <br> <br>
 
                 </section>
                 <!-- SIDE PANEL ENDS -->
