front end modify
modified some front pages

--- a/profiles/templates/profiles/edit_details.html
+++ b/profiles/templates/profiles/edit_details.html
@@ -37,7 +37,7 @@
                 font-weight: 900;
             }
             .current {
-                border: 1px solid;
+
                 padding: 3px;
             }
             .curr_bal {
@@ -72,11 +72,11 @@
         <br>
         
         <!-- EDIT BASIC DETAILS -->
-        <a href="#basic" class="btn btn-warning btn-block" data-toggle="modal" data-target="#basic">Edit basic</a>
+        <a href="#basic" class="btn btn-primary btn-block" data-toggle="modal" data-target="#basic" style="width: 50%;">Edit basic</a>
         <div class="modal fade" id="basic" tabindex="-1" role="dialog" aria-labelledby="basic" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
+            <div class="modal-dialog" role="document" >
+            <div class="modal-content" >
+                <div class="modal-header" >
                 <h5 class="modal-title" id="exampleModalLabel">Edit basic details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -117,7 +117,7 @@
         <br> <br>
         
         <!-- EDIT PRESENT LOCATION -->
-        <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#location">Edit present location</button>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#location" style="width: 50%">Edit present location</button>
         
         <div class="modal fade" id="location" tabindex="-1" role="dialog" aria-labelledby="location" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -146,7 +146,7 @@
         <br> <br>
         
         <!-- EDIT ACCOUNT DETAILS -->
-        <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#account">Edit account details</button> 
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#account" style="width: 50%">Edit account details</button>
         <div class="modal fade" id="account" tabindex="-1" role="dialog" aria-labelledby="account" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -173,7 +173,7 @@
         <br> <br>
         
         <!-- EDIT PASSWORD -->
-        <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#password">Edit password</button>
+        <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#password" style="width: 50%">Edit password</button>
         <div class="modal fade" id="password" tabindex="-1" role="dialog" aria-labelledby="password" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
