--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -57,13 +57,13 @@
                                 <br>
 				            <div id="collapseOne" class="accordion-body collapse" style="height: 0px; ">
 					            <div class="accordion-inner" >
-                                    <a href="{% url 'profiles:account_status' %}" class="current side" id="status">Account status</a> <br> <br>
+                                    <a href="{% url 'profiles:account_status' %}" class="current side" id="status" style="white-space: pre">&#9;Account status</a> <br> <br>
 
-                                    <a href="{% url 'profiles:settings' %}" class="side" id="settings">Account settings</a> <br> <br>
+                                    <a href="{% url 'profiles:settings' %}" class="side" id="settings" style="white-space: pre">&#9;Account settings</a> <br> <br>
 
-                                    <a href="{% url 'profiles:edit_details' %}" class="side" id="details">Edit account details</a> <br> <br>
+                                    <a href="{% url 'profiles:edit_details' %}" class="side" id="details" style="white-space: pre">&#9;Edit account details</a> <br> <br>
 
-                                     <a href="{% url 'profiles:delete_account' %}" class="side danger" id="delete">Delete account</a> <br> <br>
+                                     <a href="{% url 'profiles:delete_account' %}" class="side danger" id="delete" style="white-space: pre">&#9;Delete account</a> <br> <br>
 
 					            </div>
 				            </div>
