--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -45,9 +45,9 @@
         <!-- FOOTER -->
         <section class="foot">
             <div class="text-center">
-                &copy; Website created with <i class="fa fa-heart" style="color: green"></i> by <a href="https://github.com/rafi007akhtar" target="_blank">Md Rafi Akhtar</a>
+               &copy; Website created with <i class="fa fa-heart" style="color: green"></i> by <a href="https://github.com/hiiragimei/HomeRun" target="_blank">Home Run</a>
                 <br>
-                <i class="fa fa-github"></i> Contribute to this project on <a href="https://github.com/rafi007akhtar/BankingProject" target="_blank">GitHub</a>
+               
             </div>
         </section>
 
