--- a/accounts/templates/accounts/sign_in.html
+++ b/accounts/templates/accounts/sign_in.html
@@ -3,7 +3,7 @@
 {% block stylecontent %}
     <style>
         body {
-            background-color: aliceblue
+            background-color: aliceblue;
         }
         
         .foot {
