--- a/profiles/templates/profiles/edit_details.html
+++ b/profiles/templates/profiles/edit_details.html
@@ -158,9 +158,9 @@
                 </div>
                 <div class="modal-body">
                     Account type: <br>
-                    <input type="radio" checked> Savings
+                    <input type="radio" checked> Default
                     <br>
-                    <span class="small">(Presently, we only support Savings accounts)</span>
+                    <span class="small">(Presently, we only support Default accounts)</span>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
