--- a/profiles/templates/profiles/settings.html
+++ b/profiles/templates/profiles/settings.html
@@ -68,13 +68,13 @@
     <section id="welcome_post" class="col-9">
         <h4 style="font-weight: 300;" >
             Branch name
-            <input type="text" class="form-control" value="Park Circus Branch" disabled> <br>
+            <input type="text" class="form-control" value="CityU Branch" disabled> <br>
             
             Branch code
-            <input type="text" class="form-control" value="CB101" disabled> <br>
+            <input type="text" class="form-control" value="001" disabled> <br>
             
             Account type <br>
-            <h6><input type="radio" checked> Savings</h6>
+            <h6><input type="radio" checked> Default</h6>
             
             <br> None of these settings is changeable. Visit the bank in person to change them.                    
         </h4>
