--- a/admins/templates/admins/admin.html
+++ b/admins/templates/admins/admin.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <title>Central Bank | Admin Page</title>
+        <title>CityU Bank | Admin Page</title>
         
         <!-- CSS FRAMEWORKS REQUIRED -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -84,9 +84,9 @@
     </head>
     
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: goldenrod">
-            <img src="/static/images/logo.jpg" width="50px">
-            <a class="navbar-brand" href="index.html">&nbsp;Central Bank</a>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: cornflowerblue">
+            <img src="/static/images/768px-CityU_logo.jpg" width="50px">
+            <a class="navbar-brand" href="index.html">&nbsp;CityU Bank</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -103,14 +103,14 @@
         <div class="container-fluid">
             <section id="welcome_post">
                 <h3>
-                    Welcome, admin Hasnain.
+                    Welcome, admin.
                 </h3>
                 <br>
                 
                 <h4>Basic info</h4>
                 <section class="form-control text-center">
-                    <i class="fa fa-address-card-o"></i> Md Hasnain <br>
-                    <i class="fa fa-envelope"></i> mdhasnain839@gmail.com <br>
+                    <i class="fa fa-address-card-o"></i> admin <br>
+                    <i class="fa fa-envelope"></i> admin@test.com <br>
                     <i class="fa fa-tasks"></i> Loan approval / disapproval
                 </section> 
                 <br>
@@ -123,86 +123,20 @@
                             <th>Account number</th>
                             <th>Name</th>
                             <th>Loan reason</th>
-                            <th>Loan required (₹)</th>
+                            <th>Loan required (HKD)</th>
                             <th>Action</th>
                         </tr>
                     </thead>
-                    
+
                     <tbody>
                         <tr>
-                            <td>XXXXXX</td>
-                            <td>Rafi Akhtar</td>
-                            <td>Education loan. Semesters have begun and I need to: (a) buy movie tickets, (b) pay for external HDD (that stores documentaries), (c) waste time.</td>
-                            <td>20000</td>
+                            <td>-</td>
+                            <td>EXAMPLE</td>
+                            <td>Car Loan</td>
+                            <td>200000</td>
                             <td class="row">
                                 <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>Nizam Ahmed</td>
-                            <td>Travel loan. I recently saw the film, "Ye Jawani Hai Diwani," and that inspired me to travel the world in my youth!</td>
-                            <td>30000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>Tauseef Kamal</td>
-                            <td>Car loan, for the kick!</td>
-                            <td>20000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>Bruce Wayne</td>
-                            <td>Wayne Industry collapsed. That maniac, Bane, has held the police force hostage, dethrown me from my own company, and intends to destroy Gotham. I must stop him.</td>
-                            <td>150000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>T'Challa</td>
-                            <td>Wakanda betrayed me. Find out more in my feature-film, "Black Panther." Trailers are out already.</td>
-                            <td>1500000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>Tony Stark</td>
-                            <td>Need to build Thanos-Buster. Because why the hell not?</td>
-                            <td>1900000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
-                            </td>
-                        </tr>
-                        
-                        <tr>
-                            <td>XXXXXX</td>
-                            <td>Tywin Lannister</td>
-                            <td>Casterly Rock's gold mines are exhausted, thanks to that pompous drunk King.</td>
-                            <td>500000</td>
-                            <td class="row">
-                                <button class="btn btn-success col btn-block">ACCEPT</button>
-                                <button class="btn btn-danger col btn-block">REJECT</button> 
+                                <button class="btn btn-danger col btn-block">REJECT</button>
                             </td>
                         </tr>
                     </tbody>
@@ -257,11 +191,6 @@
         
         <!-- FOOTER -->
         <section class="foot">
-            <div class="text-center">
-                &copy; Website created with <i class="fa fa-heart" style="color: green"></i> by <a href="https://github.com/rafi007akhtar" target="_blank">Md Rafi Akhtar</a>  
-                <br>
-                <i class="fa fa-github"></i> Contribute to this project on <a href="https://github.com/rafi007akhtar/BankingProject" target="_blank">GitHub</a>
-            </div>
         </section>
         
         <!-- JS LIBRARIES REQUIRED -->
