--- a/profiles/templates/profiles/profile_base_layout.html
+++ b/profiles/templates/profiles/profile_base_layout.html
@@ -21,7 +21,7 @@
     </head>
     
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: floralwhite">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: dodgerblue">
             <img src="/static/images/768px-CityU_logo.jpg" width="50px">
             <a class="navbar-brand" > CityU Bank</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
         </nav>
         
         <br> <br>
-        <div style="background-color: blue;height: 11px"><br></div>
+        <div style="background-color: dodgerblue;height: 11px"><br></div>
        
         <div class="container-fluid row">
         
